# zignature-semantics

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  learning.md  test.txt
backend/: .env.example  Dockerfile  careers-postman_collection.json  pyproject.toml
backend/apps/accounts/: admin.py  google.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/accounts/management/commands/: create_staff_group.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/careers/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/careers/migrations/: 0001_initial.py
backend/apps/profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/profiles/migrations/: 0001_initial.py  0002_alter_profile_location_alter_profile_phone.py
backend/common/: apps.py  exception_handler.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py  production.py
backend/tests/: test_auth.py  test_google_auth.py  test_smoke.py
backend/tests/accounts/: test_user_model.py
backend/tests/admin/: test_admin.py
backend/tests/careers/: test_api.py  test_careers_models.py
backend/tests/profiles/: test_profile_api.py  test_signals.py
frontend/: .vercelignore  index.html  package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  careers.js  client.js  notifications.js  profile.js
frontend/src/components/home/: HeroSection.jsx  LogoLoop.jsx
frontend/src/components/layout/: Footer.jsx  Layout.jsx  Navbar.jsx  NotificationDropdown.jsx
frontend/src/components/seo/: SEO.jsx
frontend/src/components/ui/: AppLoader.jsx
frontend/src/data/: notifications.json
frontend/src/hooks/: useAuth.js  useAxiosPrivate.js
frontend/src/pages/about/: AboutPage.jsx
frontend/src/pages/auth/: LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx
frontend/src/pages/careers/: CareersPage.jsx
frontend/src/pages/contact/: ContactPage.jsx
frontend/src/pages/home/: HomePage.jsx
frontend/src/pages/services/: ServicesPage.jsx
frontend/src/stores/: authStore.js  footerStore.js  navbarStore.js  notificationStore.js
nginx/: nginx.dev.conf
